// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton DarkTheme should math the snapshot disable status 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
  color: #6D7B8E;
}

<button
    class="c0 primary"
    disabled=""
  />
</DocumentFragment>
`;

exports[`StyledButton DarkTheme should math the snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
  color: #6D7B8E;
}

<button
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`StyledButton DarkTheme should math the snapshot with bordeless-alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
  color: #6D7B8E;
}

<button
    class="c0 bordeless-alert"
  />
</DocumentFragment>
`;

exports[`StyledButton DarkTheme should math the snapshot with primary class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #313649;
  color: #6D7B8E;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #313649;
  color: #6D7B8E;
}

<button
    class="c0 primary"
  />
</DocumentFragment>
`;

exports[`StyledButton LightTheme should math the snapshot disable status 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCC;
  color: #666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCC;
  color: #666;
}

<button
    class="c0 primary"
    disabled=""
  />
</DocumentFragment>
`;

exports[`StyledButton LightTheme should math the snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCC;
  color: #666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCC;
  color: #666;
}

<button
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`StyledButton LightTheme should math the snapshot with bordeless-alert class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCC;
  color: #666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCC;
  color: #666;
}

<button
    class="c0 bordeless-alert"
  />
</DocumentFragment>
`;

exports[`StyledButton LightTheme should math the snapshot with primary class 1`] = `
<DocumentFragment>
  .c0 {
  border-radius: 0.5rem;
  border: none;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;
  height: 3.125rem;
  padding: 0 1rem;
  transition: background-color 0.3s;
  width: 100%;
}

.c0.primary {
  background-color: #0C70f2;
  color: #FFF;
}

.c0.primary:hover {
  background-color: #0061DE;
}

.c0.alert {
  background-color: #E80000;
  color: #FFF;
}

.c0.alert:hover {
  background-color: #D80000;
}

.c0.borderless-alert {
  background-color: transparent;
  color: #E80000;
  padding: 0;
  height: 0;
}

.c0.borderless-alert:hover {
  color: #D80000;
}

.c0:disabled {
  background-color: #CCC;
  color: #666;
  cursor: not-allowed;
}

.c0:disabled:hover {
  background-color: #CCC;
  color: #666;
}

<button
    class="c0 primary"
  />
</DocumentFragment>
`;
